@@ -79,10 +79,12 @@
 #define US_ENTER_YN         "/usr/common/obj/ustate/enter_yn"
 #define US_OBJ_DESC         "/usr/common/obj/ustate/set_obj_desc"
 #define US_SCROLL_TEXT      "/usr/common/obj/ustate/scroll_text"
+#define US_OLC_ATTRIB       "/usr/common/obj/ustate/olcattrib"
 #define US_MAKE_ROOM        "/usr/common/obj/ustate/makeroom"
 
 /* Telnet Option Handlers */
 #define TELOPT_DEFAULT_HANDLER  "/usr/common/obj/telopt/default_dgd"
+#define TELOPT_EXTRA_HANDLER    "/usr/common/obj/telopt/extra_telnet"
 
 
 /* Lightweight objects */
