@@ -1,4 +1,6 @@
 Release 0.019:
+    * Allow games to specifically turn off all non-basic telnet options
+    * Phantasmal now supports telnet options NAWS and TTYPE
 
 Release 0.017/0.018:
     * Fixed @new_mob syntax to handle the three-argument version correctly
